# Aqours-code

./: .dockerignore  .env.example  .gitignore  AGENT_FEATURES.md  ARCHITECTURE.md  HARNESS_ISSUES.md  README.md  analyze_dump.py  analyze_timeline.py  analyze_trace.py  pyproject.toml
codepilot_s20/: __init__.py  agent_loop.py  agent_profiles.py  autonomous.py  background.py  basic_tools.py  command_executor.py  command_safety.py  compact.py  config.py  context.py  cron.py  docker_utils.py  eval_container_entry.py  hooks.py  knowledge.py  main.py  mcp.py  message_bus.py  model_api.py  model_broker.py  model_budget.py  prompts.py  protocol.py  recovery.py  runtime.py  runtime_context.py  runtime_state.py  skills.py  subagent.py  task_system.py  teammate.py  terminal.py  tool_defs.py  tool_handlers.py  tool_registry.py  trace.py  trace_analysis.py  worktree_system.py
evals/: compare_phase3.py  docker_sandbox.py  grader_common.py  run_eval.py  scoring.py
scripts/: stress_agent.py  test_trace_cleanup.py
tests/: conftest.py  test_agent_loop_fake_model.py  test_background_lifecycle.py  test_command_executors.py  test_compact.py  test_eval_clean_room.py  test_eval_docker_remaining.py  test_eval_docker_security.py  test_eval_scoring.py  test_full_harness_capabilities.py  test_import_side_effects.py  test_model_api_usage.py  test_model_broker.py  test_model_budget.py  test_multiagent_roles.py  test_once_scheduler.py  test_permission_stop.py  test_phase3_comparison.py  test_runtime.py  test_runtime_context.py  test_stress_distributed_ledger_eval.py  test_tool_registry.py  (+5 more)
(+134 files in other folders)
